--- a/Modulo 5.csproj
+++ b/Modulo 5.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="MySql.Data" Version="8.0.21" />
   </ItemGroup>
 
