--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "Default": "server=127.0.0.1;user=root;password=;database=mod5"
+  },
   "AllowedHosts": "*"
 }
