--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
   },
   "ConnectionStrings": {
     "Default": "server=127.0.0.1;user=root;password=;database=mod5"
+    //"Default": "server=db4free.net::3306;user=supastar;password=pepeproblemas;database=modulo5"
   },
   "AllowedHosts": "*"
 }
