--- a/Modulo 5.csproj
+++ b/Modulo 5.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.21" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Urgencias\Modales\" />
+  </ItemGroup>
+
 </Project>
