Cambios en footer y vista nosotros

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,7 @@
     "Port": "587",
     "Password": "Ulisestortuga1",
     "EnableSsl": "true",
-    "Email": "tucuenta@gmail.com",
+    "Email": "pruebasmodulo5cetis@gmail.com",
     "Host": "smtp.gmail.com"
   },
   "ConnectionStrings": {
