--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    //"Default": "server=127.0.0.1;user=root;password=;database=modulo5"
-    "Default": "server=modulo5hosp.mysql.database.azure.com:3306;user=ObedNoeM@modulo5hosp;password=Narutouz1;database=modulo5"
+    "Default": "server=127.0.0.1;user=root;password=;database=modulo5"
     //"Default": "Server=127.0.0.1;Port=50980;Database=localdb;Uid=azure;Pwd=6#vWHD_$;"
   },
   "AllowedHosts": "*"
