--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "server=127.0.0.1;user=root;password=;database=modulo5"
-    //"Default": "Server=127.0.0.1;Port=50980;Database=localdb;Uid=azure;Pwd=6#vWHD_$;"
+    "Default": "server=127.0.0.1;user=root;password=;database=hospital"
+    //"DefaultConnection": "Server=127.0.0.1;Port=50980;Database=localdb;Uid=azure;Pwd=6#vWHD_$;"
   },
   "AllowedHosts": "*"
 }
